Verion 1.4.1 ============ FIX: The auto updater was downloading .msi. It needs to download the .exe
Version 1.4
===========
ADD: Latest PlantUml version which supports Asynchronous Message in Sequence Diagram, Class member visibility
FIX: When the browse for folder dialog box is opened, it defaults to the path on the text box
CHANGE: The Plantuml.jar is no longer embedded inside the plantuml.exe. The exe used to extract the jar and then run and thus very slow.
CHANGE: When a file is opened for the first time and first save is done, it first creates a backup. This helps recover from accidental changes.

--- a/PlantUmlEditor/DiagramViewControl.xaml
+++ b/PlantUmlEditor/DiagramViewControl.xaml
@@ -28,7 +28,7 @@ xmlns:plantuml="clr-namespace:PlantUmlEditor" DataContextChanged="UserControl_Da
           <RowDefinition Height="38"></RowDefinition>
         </Grid.RowDefinitions>
         
-        <Border Grid.Row="0" Background="Black" VerticalAlignment="Center">
+        <Border Grid.Row="0" Background="Black" VerticalAlignment="Center" Visibility="Collapsed">
           <WrapPanel>
             <TextBlock VerticalAlignment="Center">Search</TextBlock>
             <TextBox x:Name="SearchTextBox" Width="100" ></TextBox>
@@ -166,6 +166,12 @@ xmlns:plantuml="clr-namespace:PlantUmlEditor" DataContextChanged="UserControl_Da
                       <MenuItem.Tag>
                         <![CDATA[Alice -> Bob: Authentication Request]]>
                       </MenuItem.Tag>
+                    </MenuItem>
+
+                    <MenuItem Style="{DynamicResource MenuItemStyle}" Header="Asynchronous Request">
+                        <MenuItem.Tag>
+                            <![CDATA[Alice ->> Bob: Authentication Request]]>
+                        </MenuItem.Tag>
                     </MenuItem>
 
                     <MenuItem Style="{DynamicResource MenuItemStyle}" Header="Return Message">
@@ -504,6 +510,17 @@ end note
                   </MenuItem>
 
                   <MenuItem Style="{DynamicResource MenuItemStyle}" Header="Class">
+                    <MenuItem Style="{DynamicResource MenuItemStyle}" Header="Sample Class">
+                        <MenuItem.Tag>
+                                                <![CDATA[class Dummy {
+ -field1
+ #field2
+ ~method1()
+ +method2()
+}]]>
+                        </MenuItem.Tag>
+                    </MenuItem>
+                      
                     <MenuItem Style="{DynamicResource MenuItemStyle}" Header="Generalization">
                       <MenuItem.Tag>
                         <![CDATA[Human <|-- Student]]>
