--- a/PlantUmlEditor/MainWindow.xaml
+++ b/PlantUmlEditor/MainWindow.xaml
@@ -9,7 +9,7 @@ xmlns:customAnimation="clr-namespace:PlantUmlEditor.CustomAnimation"
 Title="PlantUml Editor" Height="700" Width="740" WindowStartupLocation="CenterScreen"     
 xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-Background="{DynamicResource MainBackgroundBrush}" Loaded="Window_Loaded">
+Background="{DynamicResource MainBackgroundBrush}" Loaded="Window_Loaded" Closing="Window_Closing">
   <Window.Resources>
     <ResourceDictionary>
       <plantuml:DoubleToGridLengthConverter x:Key="doubleToGridLengthConverter" />      
